@@ -205,7 +205,12 @@ public class ArticleTranslator {
                     }
 
                     String affiliation = author.getAffiliation();
-                    AuthorName authorName = new AuthorName(firstName, middleName, lastName);
+                    // AuthorName's constructor derives an initial by substring(0, 1) of any
+                    // non-null firstName/middleName, so a blank-or-whitespace value crashes
+                    // with StringIndexOutOfBoundsException (e.g. a PubMed author with an
+                    // empty <ForeName>). Normalize blanks to null, which the constructor
+                    // handles. lastName is null-guarded above and never substringed.
+                    AuthorName authorName = new AuthorName(blankToNull(firstName), blankToNull(middleName), lastName);
 
                     ReCiterAuthor reCiterAuthor = new ReCiterAuthor(authorName, affiliation);
                     reCiterAuthor.setRank(i++);
@@ -221,9 +226,13 @@ public class ArticleTranslator {
 
         // Translating Keywords.
         ReCiterArticleKeywords articleKeywords = new ReCiterArticleKeywords();
-        if (keywordList != null) {
+        if (keywordList != null && keywordList.getKeywordlist() != null) {
             for (MedlineCitationKeyword keyword : keywordList.getKeywordlist()) {
-                articleKeywords.addKeyword(keyword.getKeyword());
+                // A keyword list can contain null entries (observed in PubMed data) —
+                // skip them, and defensively skip entries whose keyword text is null.
+                if (keyword != null && keyword.getKeyword() != null) {
+                    articleKeywords.addKeyword(keyword.getKeyword());
+                }
             }
         }
 
@@ -501,13 +510,13 @@ public class ArticleTranslator {
         // Volume
         if (hasJournal && pubmedArticle.getMedlinecitation().getArticle().getJournal().getJournalissue() != null
                 && pubmedArticle.getMedlinecitation().getArticle().getJournal().getJournalissue().getVolume() != null
-                && !pubmedArticle.getMedlinecitation().getArticle().getJournal().getJournalissue().getVolume().isEmpty()) {
+                && !pubmedArticle.getMedlinecitation().getArticle().getJournal().getJournalissue().getVolume().isBlank()) {
             reCiterArticle.setVolume(pubmedArticle.getMedlinecitation().getArticle().getJournal().getJournalissue().getVolume());
         }
         // issue
         if (hasJournal && pubmedArticle.getMedlinecitation().getArticle().getJournal().getJournalissue() != null
                 && pubmedArticle.getMedlinecitation().getArticle().getJournal().getJournalissue().getIssue() != null
-                && !pubmedArticle.getMedlinecitation().getArticle().getJournal().getJournalissue().getIssue().isEmpty()) {
+                && !pubmedArticle.getMedlinecitation().getArticle().getJournal().getJournalissue().getIssue().isBlank()) {
             reCiterArticle.setIssue(pubmedArticle.getMedlinecitation().getArticle().getJournal().getJournalissue().getIssue());
         }
 
@@ -533,6 +542,19 @@ public class ArticleTranslator {
         return reCiterArticle;
     }
     
+    /**
+     * Normalizes a blank-or-whitespace name part to null so that AuthorName's
+     * constructor (which substrings any non-null value to derive the initial)
+     * cannot throw StringIndexOutOfBoundsException on it.
+     * Package-private for testing.
+     */
+    static String blankToNull(String namePart) {
+        if (namePart == null || namePart.isBlank()) {
+            return null;
+        }
+        return namePart;
+    }
+
     /**
      * Phase 1: Determine canonical publication type from PubMed publication types.
      *
@@ -687,7 +709,7 @@ public class ArticleTranslator {
         String journalTitle = reCiterArticle.getJournal() != null && reCiterArticle.getJournal().getJournalTitle() != null
                 ? reCiterArticle.getJournal().getJournalTitle().toLowerCase() : "";
         boolean hasAbstract = reCiterArticle.getPublicationAbstract() != null
-                && !reCiterArticle.getPublicationAbstract().isEmpty();
+                && !reCiterArticle.getPublicationAbstract().isBlank();
         // Distinguish full IMRaD structure (METHODS + RESULTS) from partial structure
         // (has section labels like BACKGROUND/CONCLUSIONS but no methods/results).
         // Full IMRaD strongly confirms original research. Partial structure is weaker —
@@ -886,7 +908,7 @@ public class ArticleTranslator {
      * like "1262-71" (= 1262-1271, NOT single page).
      */
     private static boolean isSinglePageArticle(String pages) {
-        if (pages == null || pages.trim().isEmpty()) {
+        if (pages == null || pages.isBlank()) {
             return false;
         }
         pages = pages.trim();
@@ -949,11 +971,11 @@ public class ArticleTranslator {
 					boolean addCoAuthor = true;
 					for(String ignoredCoAuthorName: ignoredCoAuthorNames) {
 						String[] nameArray = ignoredCoAuthorName.split(" ");
-						if(nameArray[1] != null && !nameArray[1].isEmpty() 
+						if(nameArray[1] != null && !nameArray[1].isBlank() 
 								&&
 								author.getAuthorName().getFirstInitial().equalsIgnoreCase(nameArray[1])
 								&&
-								nameArray[0] != null && !nameArray[0].isEmpty()
+								nameArray[0] != null && !nameArray[0].isBlank()
 								&&
 								author.getAuthorName().getLastName().equalsIgnoreCase(nameArray[0])) { 
 							addCoAuthor = false;
